@@ -2,7 +2,7 @@ sdparm (1.09-0.1) unstable; urgency=low
 
   * see ChangeLog
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 17 Jun 2013 01:00:00 +0200
+ -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 15 Jul 2013 10:00:00 -0400
 
 sdparm (1.08-0.1) unstable; urgency=low
 
